# sphinx-portfolio

./: .buildinfo  README.md  about.html  genindex.html  index.html  publications.html  pyproject.toml  search.html  sitemap.xml
.github/workflows/: build.yml  pr_preview.yml  publish.yml  spelling.yml
pr-preview/pr-2/: .buildinfo  about.html  genindex.html  index.html  objects.inv  publications.html  search.html  searchindex.js  sitemap.xml  syntax.html
pr-preview/pr-2/_sources/: index.md.txt  syntax.md.txt
source/: about.md  bibliography.bib  conf.py  index.md  publications.md  syntax.md
source/_static/: custom.css
source/_templates/: layout.html  sidebar.html
