[project]
name = "sphinx-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "myst-parser>=5.0.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=9.1.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-sitemap>=2.9.0",
    "sphinx-tabs>=3.4.7",
    "sphinx-togglebutton>=0.4.4",
    "sphinxcontrib-bibtex>=2.6.5",
    "sphinxcontrib-spelling>=8.0.2",
]
